--- a/app/src/main/res/layout/fragment_addmembers_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_addmembers_bottom_sheet.xml
@@ -25,7 +25,7 @@
                 android:layout_marginEnd="15dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="5dp"
-                android:background="@null"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:gravity="top"
                 android:scaleType="fitXY"
                 android:src="@drawable/baseline_close_24"
@@ -71,7 +71,7 @@
                         android:layout_height="35dp"
                         android:scaleType="fitXY"
                         android:layout_gravity="center"
-                        android:background="@color/transparent"
+                        android:background="?android:attr/selectableItemBackgroundBorderless"
                         android:src="@drawable/baseline_search_24"
                         app:tint="?android:attr/iconTint"
                         android:layout_marginStart="5dp"
