--- a/app/src/main/res/layout/members_layout.xml
+++ b/app/src/main/res/layout/members_layout.xml
@@ -18,6 +18,7 @@
             android:id="@+id/imgUser"
             android:layout_width="45dp"
             android:layout_height="45dp"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
             android:src="@drawable/default_image"
             tools:src="@drawable/r"
             android:clickable="true"
@@ -85,7 +86,9 @@
             android:layout_gravity="end|center"
             android:contentDescription="ButtonEditHole"
             android:src="@drawable/baseline_edit_24"
-            android:background="@color/transparent"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
             app:tint="?android:attr/iconTint"
             android:scaleType="fitXY"
             android:layout_marginEnd="10dp"
@@ -98,7 +101,9 @@
             android:layout_gravity="end|center"
             android:contentDescription="ButtonRemoveUser"
             android:src="@drawable/baseline_close_24"
-            android:background="@color/transparent"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
             app:tint="?android:attr/iconTint"
             android:scaleType="fitXY"
             android:layout_marginEnd="10dp"
@@ -111,7 +116,9 @@
             android:layout_gravity="end|center"
             android:contentDescription="ButtonRemoveUser"
             android:src="@drawable/baseline_logout_24"
-            android:background="@color/transparent"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
             app:tint="?android:attr/iconTint"
             android:scaleType="fitXY"
             android:layout_marginEnd="10dp"
