--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".teams.TeamBottomSheet"
+    tools:context=".teams.DashboardActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:focusable="false"
     android:fillViewport="true">
@@ -20,12 +20,12 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:gravity="center"
             android:orientation="horizontal"
-            android:layout_marginBottom="20dp"
             android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp">
 
@@ -56,10 +56,10 @@
                 android:layout_height="30dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/baseline_close_24"
-                android:background="@null"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:layout_marginStart="20dp"
                 android:layout_gravity="end|center"
-                app:tint="?android:attr/iconTint" />
+                app:tint="?android:attr/iconTint"/>
 
         </LinearLayout>
 
@@ -94,14 +94,5 @@
     </LinearLayout>
 
 </ScrollView>
-
-
-<View
-android:layout_width="40dp"
-android:layout_height="5dp"
-android:layout_marginTop="10dp"
-android:background="@drawable/image_shape"
-android:backgroundTint="?attr/shimmerColor"
-android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
