--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -25,7 +25,8 @@
                 android:layout_height="35dp"
                 android:layout_gravity="start"
                 android:contentDescription="@string/logouser"
-                android:src="@drawable/default_image" />
+                android:src="@drawable/default_image"
+                android:background="?android:attr/selectableItemBackgroundBorderless"/>
 
             <ProgressBar
                 android:id="@+id/progressBar"
@@ -88,16 +89,29 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="bottom">
+            android:orientation="horizontal"
+            android:gravity="bottom|end"
+            android:layout_gravity="bottom">
+
+            <TextView
+                android:id="@+id/txtTerms"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginBottom="15dp"
+                android:layout_marginStart="20dp"
+                android:text="Termos de Uso e Privacidade"
+                android:textStyle="bold"
+                android:textSize="12sp"
+                android:textColor="@color/disabled"
+                android:clickable="true"/>
 
             <ImageButton
                 android:id="@+id/btnTheme"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:layout_gravity="end"
                 android:src="@drawable/baseline_sunny_24"
-                android:background="@null"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:layout_margin="20dp"
                 android:scaleType="fitXY"
                 app:tint="?android:attr/iconTint" />
