--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -144,9 +144,7 @@
                 android:inputType="text"
                 android:hint="ex.: Brasileiro"
                 android:background="@drawable/spinner_background"
-                android:enabled="true"
                 android:textSize="16sp"
-                android:paddingStart="15dp"
                 android:layout_marginBottom="5dp"/>
 
             <TextView
@@ -300,7 +298,7 @@
             android:id="@+id/btnBack"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@null"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="BackButton"
             android:src="@drawable/baseline_arrow_back_24"
             android:scaleType="fitXY"
