--- a/app/src/main/res/layout/activity_teamoverview.xml
+++ b/app/src/main/res/layout/activity_teamoverview.xml
@@ -18,7 +18,7 @@
         android:id="@+id/btnClose"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:background="@null"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
         android:contentDescription="BackButton"
         android:src="@drawable/baseline_close_24"
         app:tint="?android:attr/iconTint"
@@ -37,10 +37,7 @@
             app:tabSelectedTextColor="?android:attr/textColorPrimary"
             app:tabTextColor="?android:attr/textColorPrimary" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
+
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPager"
@@ -50,6 +47,5 @@
             android:layout_marginEnd="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="0dp"/>
-    </ScrollView>
     </LinearLayout>
 </RelativeLayout>
