--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -68,7 +68,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:src="@drawable/baseline_logout_24"
-        android:background="@null"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
         android:scaleType="fitXY"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
